src/scss/theme/layout.scss
/**
* Globals overrides to change the layout of slides
*/
.reveal {
	ol, dl, ul {
		line-height: 1.5em;
		text-align: left;
		margin: 0 0 0 0em;
	}

	ul{
		list-style-type: disc;
	}

	.slides section.stack{
		height: 100%;
	}
	
	.slides section li p{
		font-size: 100%;
	}
	
	.slides section p{
		font-size: 1em;
	}
	
	.slides section[data-type-show=full] p{
			font-size: 100%;
	}
	
	.slides section p+p{
		margin-top: 40px;
	}
	blockquote::before{
		content:'\“';
		position:absolute;
		top: 0;
		left: 0;
		width:50px;
		height: 50px;
	}

	blockquote::after{
		content:'\”';
		position:absolute;
		bottom: -0.5em;
		right: -0.5em;
		width:50px;
		height: 50px;
	}
	
	blockquote {
		display: block;
		position: relative;
		width: 70%;
		margin: 20px auto;
		padding: 1em;
		text-align: left;
		font-style: italic;
		background: white;
		color: $dark-grey;
		box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
	}
	
}


.reveal .slides section:not(.sfeir-specific-slide):not(.stack):not([class*=transition]),
.reveal .slides section.sfeir-basic-slide:not(.stack):not([class*=transition]),
.reveal .slides section.sfeir-specific-slide.sfeir-bg-axololt:not(.stack):not([class*=transition]){

	width: 100%;
	height: calc(100% - 40px);
	height: -webkit-calc(100% - 40px);
	text-align: left;
	font-size: 1em;

    h1, h2{
		text-transform: initial;
		text-align: left;
		color: $black;
      font-size: 1.5em;
      font-weight: 600;
	  
	  
    }

    h1, h2, h3{
			text-transform: initial;
    		margin-bottom: 130px;
		}

   	h1~h2, h2~h3, h1~h3{
			text-transform: initial;
			margin-top: -90px;
			margin-bottom: 40px;
			color: $black;
			font-size: 1em;
	}
	
	table{
		width: 100%;
	}

	thead{
		background-color: $sfeir-pink;
		color:$white;
	}
	
	&.blue thead{
		background-color: $sfeir-blue;
	}
	
	&.green thead{
		background-color: $sfeir-green;
	}
}

.reveal .slides section.sfeir-basic-slide:not(.stack),
.reveal .slides section.exercice:not(.stack){
	color:$dark-grey;

	h1, h2, h3{
		margin-bottom: 100px;
	}

    h1, h2, h1~h2, h2~h3, h1~h3{
		position: relative;
	    color: $black;      
		text-align: left;
	}
	
	h1:first-of-type:after, h2:first-of-type:after {
		position: absolute;
		content: '';
		width: 40%;
		height: 10px;
		background-color: $sfeir-pink;
		bottom: -30px;
		left: 0;
	}

	&.blue h1:first-of-type:after, &.blue h2:first-of-type:after {
		background-color: $sfeir-blue;
	}
	
	&.green h1:first-of-type:after, &.green h2:first-of-type:after {
		background-color: $sfeir-green;
	}

	h1~h2:first-of-type:after, h2~h3:first-of-type:after, h1~h3:first-of-type:after{
		content: initial;
	}
}


/**
* Two Columns slides
*/

.reveal .slides section.two-column-layout {
	display: grid;
	grid-template-columns: 50% 50%;
	grid-template-rows: 100px auto;
	grid-column-gap: 20px;
	grid-template-columns: 1fr 1fr;

	section:first-child{
		grid-row-start: 1;
		opacity: 1;
	}
	section:nth-child(2){
		margin-top: 50px;
		grid-row-start: 2;
		grid-column-end: 2;
		opacity: 1;
	}
	section:last-child{
		margin-top: 50px;
		grid-row-start: 2;
		grid-column-start: 2;
		opacity: 1;
	}
}

/**
* Reset Somes styles
*/

.reveal section img{
	margin: initial;
	background: initial;
	border: initial;
	box-shadow: initial;
}

